Last part of tutorial (code-first style)
* Alternative approaches to schema development
* GraphQL SPQR

--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,6 +1,6 @@
 {
   "name": "Untitled GraphQL Schema",
-  "schemaPath": "src\\main\\resources\\schema.graphqls",
+  "schemaPath": "schema.graphqls",
   "extensions": {
     "endpoints": {
       "Default GraphQL Endpoint": {
